--- a/app/views/company.html
+++ b/app/views/company.html
@@ -97,7 +97,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.companyname} " class="form-control req-field-color " placeholder="Enter the Company name " name="companyname " required="required " ng-model="props.company_name
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -106,7 +106,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.contactname} " class="form-control req-field-color " placeholder="Enter the Contact Name " name="contactname " required="required " ng-model="props.contact_name
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -124,7 +124,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.companyemail} " class="form-control req-field-color " placeholder="Enter the company email " name="email " required="required " ng-model="props.email
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -181,7 +181,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.companyname} " class="form-control req-field-color " placeholder="Enter the Company name " name="companyname " required="required " ng-model="props.company_name
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -190,7 +190,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.contactname} " class="form-control req-field-color " placeholder="Enter the Contact Name " name="contactname " required="required " ng-model="props.contact_name
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -208,7 +208,7 @@
                             </div>
                             <div class="col-md-8 no-padding-hr ">
                                 <input type="text " ng-class="{ 'haserror':field===fields.companyemail} " class="form-control req-field-color " placeholder="Enter the company email " name="email " required="required " ng-model="props.email
-                " ng-change="fieldschangeAction() ">
+                " ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
