--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -48,7 +48,7 @@
                                 <label class="mdl_label control-label" autofocus="none">Role Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-9  no-padding-hr">
-                                <input type="text" ng-class="{'haserror':field===fields.rolename}" class="form-control req-field-color" placeholder="Enter the Role name" name="rolename" required="required" maxlength="50" ng-model="display_name" ng-change="validations()">
+                                <input type="text" ng-class="{'haserror':field===fields.rolename}" class="form-control req-field-color" placeholder="Enter the Role name" name="rolename" required="required" ng-model="display_name" ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <div ng-show="showerrormessage" class="col-md-12 no-padding-hr form-group ">
@@ -86,7 +86,7 @@
                                 <label class="mdl_label control-label" autofocus="none">Role Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-9  no-padding-hr">
-                                <input type="text" ng-class="{'haserror':field===fields.rolename}" class="form-control req-field-color" placeholder="Enter the Role name" name="rolename" required="required" maxlength="50" ng-model="display_name" ng-change="validations()">
+                                <input type="text" ng-class="{'haserror':field===fields.rolename}" class="form-control req-field-color" placeholder="Enter the Role name" name="rolename" required="required" maxlength="45" ng-model="display_name" ng-change="validations()">
                             </div>
                         </div>
                         <div ng-show="showerrormessage" class="col-md-12 no-padding-hr form-group ">
