--- a/app/views/vouchersettings.html
+++ b/app/views/vouchersettings.html
@@ -87,7 +87,7 @@
                                 </label>
                             </div>
                             <div class="col-md-8 no-padding-hr ">
-                                <input type="text" class="form-control" placeholder="Enter voucher name" name="companyname " required="required " ng-model="voucherSubmit.name" ng-change="fieldschangeAction()">
+                                <input type="text" class="form-control" placeholder="Enter voucher name" name="companyname " required="required " ng-model="voucherSubmit.name" ng-change="fieldschangeAction()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr" ng-show="voucherFields.isTypeselected">
