--- a/app/views/user.html
+++ b/app/views/user.html
@@ -73,7 +73,7 @@
                                 <label class="mdl_label control-label" autofocus="none">Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-8 no-padding-hr">
-                                <input type="text" ng-class="{'haserror':field===fields.username}" class="form-control req-field-color" placeholder="Enter the user name" name="name" required="required" ng-model="props.username" ng-change="validations()">
+                                <input type="text" ng-class="{'haserror':field===fields.username}" class="form-control req-field-color" placeholder="Enter the user name" name="name" required="required" ng-model="props.username" ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr">
@@ -81,7 +81,7 @@
                                 <label class="mdl_label control-label" autofocus="none">E-mail<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-8  no-padding-hr">
-                                <input type="text" ng-class="{'haserror':field===fields.email}" class="form-control req-field-color" placeholder="Enter the E-mail" name="email" required="required" ng-model="props.email" ng-change="validations()">
+                                <input type="text" ng-class="{'haserror':field===fields.email}" class="form-control req-field-color" placeholder="Enter the E-mail" name="email" required="required" ng-model="props.email" ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <!-- <div class="col-md-12 form-group no-padding-hr">
@@ -187,7 +187,7 @@
                                 <label class="mdl_label control-label " autofocus="none ">Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk "></span></label>
                             </div>
                             <div class="col-md-8 no-padding-hr ">
-                                <input type="text" ng-class="{'haserror':field===fields.username}" class="form-control req-field-color " placeholder="Enter the user name" name="name" required="required " ng-model="props.username " ng-change="validations()">
+                                <input type="text" ng-class="{'haserror':field===fields.username}" class="form-control req-field-color " placeholder="Enter the user name" name="name" required="required " ng-model="props.username " ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr ">
@@ -195,7 +195,7 @@
                                 <label class="mdl_label control-label" autofocus="none ">E-mail<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk "></span></label>
                             </div>
                             <div class="col-md-8 no-padding-hr ">
-                                <input type="text" ng-class="{'haserror':field===fields.email}" class="form-control req-field-color" placeholder="Enter the E-mail " name="email" required="required" ng-model="props.email " ng-change="validations() ">
+                                <input type="text" ng-class="{'haserror':field===fields.email}" class="form-control req-field-color" placeholder="Enter the E-mail " name="email" required="required" ng-model="props.email " ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <!-- <div class="col-md-12 form-group no-padding-hr ">
