--- a/app/views/search.html
+++ b/app/views/search.html
@@ -16,7 +16,7 @@
                     <span class="actionsmenu"><span>{{item.display_name}}</span></span>
                 </li>
             </ul>
-            <button class=" button button-calm " style="width: 100% " ng-show="LoadMoreButton " ng-click="showMoreResults() ">
+            <button class=" button loadmorebutton" style="width: 100% " ng-show="LoadMoreButton " ng-click="showMoreResults() ">
                 Load More Results
                </button>
         </div>
